{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 79,
  "lineage": "602d3ae2-abb2-1f0b-c101-c1a11fd51796",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff3ef450-399a-49a3-be1f-efbba25fb030/resourceGroups/rg-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-lab-homolog",
            "location": "eastus",
            "name": "nsg-lab-homolog",
            "resource_group_name": "rg-lab",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-rule-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "101",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ff3ef450-399a-49a3-be1f-efbba25fb030/resourceGroups/rg-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-lab-homolog/securityRules/inbound_port_80",
            "name": "inbound_port_80",
            "network_security_group_name": "nsg-lab-homolog",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "rg-lab",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "102",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ff3ef450-399a-49a3-be1f-efbba25fb030/resourceGroups/rg-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-lab-homolog/securityRules/inbound_port_443",
            "name": "inbound_port_443",
            "network_security_group_name": "nsg-lab-homolog",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "rg-lab",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "103",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ff3ef450-399a-49a3-be1f-efbba25fb030/resourceGroups/rg-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-lab-homolog/securityRules/inbound_port_3389",
            "name": "inbound_port_3389",
            "network_security_group_name": "nsg-lab-homolog",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "rg-lab",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "104",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ff3ef450-399a-49a3-be1f-efbba25fb030/resourceGroups/rg-lab/providers/Microsoft.Network/networkSecurityGroups/nsg-lab-homolog/securityRules/inbound_port_22",
            "name": "inbound_port_22",
            "network_security_group_name": "nsg-lab-homolog",
            "priority": 104,
            "protocol": "Tcp",
            "resource_group_name": "rg-lab",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.10.0/24",
              "10.10.0.0/16",
              "192.168.20.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9d861b2e-ea71-40d6-994d-6ee902a7b17c",
            "id": "/subscriptions/ff3ef450-399a-49a3-be1f-efbba25fb030/resourceGroups/rg-lab/providers/Microsoft.Network/virtualNetworks/vnet-lab-homolog",
            "location": "eastus",
            "name": "vnet-lab-homolog",
            "resource_group_name": "rg-lab",
            "tags": {
              "Ambiente": "Producao",
              "Data": "04 Apr 2023 04:35 UTC",
              "Projeto": "titan",
              "Responsavel": "MARCELO GONCALVES",
              "Tecnologia": "Hashicorp Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}